--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
     "name": "messenger",
     "version": "1.0.0",
     "root": "#",
+    "tag": "widget",
     "description": "跨域 Iframe 通信解决方案，兼容 IE 系列浏览器。",
-    "homepage": "",
-    "author": "",
+    "homepage": "http://aralejs.github.com/messenger/",
+    "author": "afc163 <afc163@gmail.com>",
     "repository": {
         "type": "git",
-        "url": ""
+        "url": "https://github.com/aralejs/messenger/"
     },
     "bugs": {
-        "url": ""
+        "url": "https://github.com/aralejs/messenger/issues"
     },
     "license": "",
     "dependencies": {
