--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "messenger",
     "version": "1.0.0",
     "root": "#",
-    "tag": "widget",
+    "tag": "utility",
     "description": "跨域 Iframe 通信解决方案，兼容 IE 系列浏览器。",
     "homepage": "http://aralejs.github.com/messenger/",
     "author": "afc163 <afc163@gmail.com>",
