--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
   - nohup node tests/test-travis.js &
 
 install: 
-  - git clone https://github.com/seajs/spm.git ../spm
+  - git clone https://github.com/spmjs/spm.git ../spm
   - npm install ../spm
   - npm install node-static swig phantomjs 
   - spm env --init
