--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+    "family": "arale",
     "name": "messenger",
     "version": "1.0.2",
-    "root": "arale",
-    "tag": "utility",
+    "keywords": ["utility", "message", "communicate"],
     "description": "跨域 Iframe 通信解决方案，兼容 IE 系列浏览器。",
     "homepage": "http://aralejs.github.com/messenger/",
     "author": "afc163 <afc163@gmail.com>",
@@ -14,11 +14,11 @@
         "url": "https://github.com/aralejs/messenger/issues"
     },
     "license": "",
-    "dependencies": {
-        "$": "$"
+    "spm": {
+        "alias": {
+            "$": "$"
+        },
+        "output": ["messenger.js"]
     },
-    "tests": ["messenger"],
-    "output": {
-        "messenger.js": "."
-    }
+    "tests": ["messenger"]
 }
