--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "1.0.2",
     "keywords": ["utility", "message", "communicate"],
     "description": "跨域 Iframe 通信解决方案，兼容 IE 系列浏览器。",
-    "homepage": "http://aralejs.github.com/messenger/",
+    "homepage": "http://aralejs.org/messenger/",
     "author": "afc163 <afc163@gmail.com>",
     "repository": {
         "type": "git",
