--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "keywords": ["utility", "message", "communicate"],
     "description": "跨域 Iframe 通信解决方案，兼容 IE 系列浏览器。",
     "homepage": "http://aralejs.org/messenger/",
-    "author": "afc163 <afc163@gmail.com>",
+    "author": "偏右 <afc163@gmail.com>",
+    "maintainers": [
+        "偏右 <afc163@gmail.com>",
+        "南伯 <me@lepture.com>"
+    ],
     "repository": {
         "type": "git",
         "url": "https://github.com/aralejs/messenger/"
