--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
     "family": "arale",
     "name": "messenger",
-    "version": "1.0.2",
+    "version": "2.0.0",
     "keywords": ["utility", "message", "communicate"],
     "description": "跨域 Iframe 通信解决方案，兼容 IE 系列浏览器。",
     "homepage": "http://aralejs.org/messenger/",
     "author": "偏右 <afc163@gmail.com>",
     "maintainers": [
-        "偏右 <afc163@gmail.com>",
-        "南伯 <me@lepture.com>"
+        "偏右 <afc163@gmail.com>"
     ],
     "repository": {
         "type": "git",
@@ -20,7 +19,6 @@
     "license": "",
     "spm": {
         "alias": {
-            "$": "$"
         },
         "output": ["messenger.js"]
     }
